--- a/package.json
+++ b/package.json
@@ -15,13 +15,22 @@
   "dependencies": {
     "@arcjet/node": "^1.0.0-beta.1",
     "@neondatabase/serverless": "^0.10.4",
+    "axios": "^1.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "helmet": "^8.0.0",
-    "morgan": "^1.10.0"
+    "lucide-react": "^0.510.0",
+    "morgan": "^1.10.0",
+    "react-hot-toast": "^2.5.2",
+    "react-router-dom": "^7.6.0",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "autoprefixer": "^10.4.21",
+    "daisyui": "^5.0.35",
+    "nodemon": "^3.1.9",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17"
   }
 }
